Possibly fixed the weird spacing between header and content
It didn't show up on Live Server, but appears when hosted on GitHub Pages, strange.

--- a/Style/style.css
+++ b/Style/style.css
@@ -174,4 +174,9 @@ body::-webkit-scrollbar-thumb {
 		padding-left: 2rem;
 		padding-right: 2rem;
 	}
+
+	header {
+		padding-left: .5rem;
+		padding-right: .5rem;
+	}
 }
